syntax = "proto3";

package onight.zjfae.afront.gensazj;
option java_outer_classname="Dictionary";
//Generated By BrewRobot:Fri Sep 08 11:48:19 CST 2017

message PBAPP_dictionary{
	//
	message Parms{
		string keyCode = 1;	 //,keyCode,Long,不校验,是,
	}


	repeated Parms parms = 1;


}

message Ret_PBAPP_dictionary{
	//

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBAPP_dictionary data=3;


}

message REQ_PBAPP_dictionary{
	//

	repeated string keyNo = 1;


}