syntax = "proto3";

package onight.zjfae.afront.gensazj;

option java_outer_classname="TencentFace";

//Generated By BrewRobot:Wed Sep 06 14:53:46 CST 2017

message PBAPP_tencentface{
	//
		string userID = 1;	 //
		string nonce = 2;	 //
		string sign = 3;	 //
		string appid = 4;	 //
		string orderNO = 5;	 //
		string faceId = 6;	 //
		string secret = 7;
		string license = 8;

}

message Ret_PBAPP_tencentface{
	//

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBAPP_tencentface data=3;


}

message REQ_PBAPP_tencentface{
	//

	string name = 1; //,用户名

	string idNo = 2; //,证件号

	string scence = 3;//类型1.verify人脸识别2.certificate身份证


}