syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="UserUnbindCardInfo";
//Generated By BrewRobot:Fri Sep 08 11:12:44 CST 2017

message PBIFE_bankcardmanage_getUserUnbindCardInfo{
	///ife/bankcardmanage/getUserUnbindCardInfo.html

	string auditComment1 = 1; //,文件1解卡审核不通过原因,String,不校验,否,

	string auditComment2 = 2; //,文件2解卡审核不通过原因,String,不校验,否,

	string auditComment3 = 3; //,文件3解卡审核不通过原因,String,不校验,否,

	string auditComment4 = 4; //,文件4解卡审核不通过原因,String,不校验,否,
	
	string auditComment5 = 5; //,文件5解卡审核不通过原因,String,不校验,否,

	string status = 6; //,审核状态,String,空表示审核通过,不校验,否,

	string remark = 7; //,备注 ,String ,不校验,否,
	
	string gmtCreate=8; //申请时间,Date,不校验,否,后台审核通过或者第一次申请
	
    string gmtAudit=9;	 //审核时间,Date,不校验,否,后台审核通过或者第一次申请
    
    string faceId =10;  // 是否人脸识别（1是/0不是)
    
    repeated DictDynamic2 dictDynamicList = 11; 

}

message DictDynamic2{
		repeated KeyAndValue2 keyValueList = 1;
		string dynamicType1 = 3;	 //,动态类型,String,不校验,是,
		string dynamicWeight = 4;	 //,权重,String,不校验,是,
		string model = 5;	 //,模型序列,String,不校验,是,
		string title = 6;	 //,标题,String,不校验,是,
		string remark = 7;	 //,备注,String,不校验,是,
		int32 upperLimit = 8;	 //,重复上限,int,不校验,是,
		string isSelect = 9 ; //是否下拉框,String,不校验,是,
		string required = 10;	 //,是否必填,String,不校验,是,
		string auditComment=11; //合格投资者审核不通过原因,String,不校验,否, 
	}

 message KeyAndValue2{
  	   string dynamicKey = 1;	 //,参数键,String,不校验,是,
	   string dynamicValue = 2;	 //,参数名/值,String,不校验,是,
}
 
message Ret_PBIFE_bankcardmanage_getUserUnbindCardInfo{
	///ife/bankcardmanage/getUserUnbindCardInfo.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_bankcardmanage_getUserUnbindCardInfo data=3;


}

message REQ_PBIFE_bankcardmanage_getUserUnbindCardInfo{
	///ife/bankcardmanage/getUserUnbindCardInfo.html
	string dynamicType1 = 1;//,动态字典类型,String,不校验,否,
    string record =2;//,查询记录,string,不校验,否,

}