syntax = "proto3";

package onight.zjfae.afront.gens;
option java_outer_classname="CancelApplication";
//Generated By BrewRobot:Tue Dec 12 19:03:21 CST 2017

message PBIFE_userinfomanage_cancelApplication{
	///ife/userinfomanage/cancelApplication.html


}

message Ret_PBIFE_userinfomanage_cancelApplication{
	///ife/userinfomanage/cancelApplication.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_userinfomanage_cancelApplication data=3;


}

message REQ_PBIFE_userinfomanage_cancelApplication{
	///ife/userinfomanage/cancelApplication.html

	string cancelBusinessType = 1; //取消业务类型	String	不校验	否	换卡changeCard，强制解绑unbindCard，会员信息修改userInfo

	string auditStatus = 2; //当前审核状态（-1待审核，0审核不通过，1审核通过）

}