syntax = "proto3";

package onight.zjfae.afront.gens;

//Generated By BrewRobot:Mon Dec 11 11:02:52 CST 2017

message PBIFE_userinfomanage_checkTradePassword{
	///ife/userinfomanage/checkTradePassword.html


}

message Ret_PBIFE_userinfomanage_checkTradePassword{
	///ife/userinfomanage/checkTradePassword.html

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBIFE_userinfomanage_checkTradePassword data=3;


}

message REQ_PBIFE_userinfomanage_checkTradePassword{
	///ife/userinfomanage/checkTradePassword.html
	
	string password =1;// 交易密码	String	不校验	否

	string isVerifyCheckCode =2;// 是否校验短信验证码：空=否；1=是；	String	不校验	否
	string checkCode =3;// 短信验证码	String	不校验	否

}